--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,32 @@
 <!DOCTYPE html>
 
 <!-- ASSIGN OUR ANGULAR MODULE -->
-<html ng-app="scotchTodo">
+<html ng-app="contentViewer">
 <head>
     <!-- META -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Optimize mobile viewport -->
 
-    <title>Node/Angular Todo App</title>
+    <title>Webcontent Wizard</title>
 
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
-    <style>
-        html                    { overflow-y:scroll; }
-        body                    { padding-top:50px; }
-        #todo-list              { margin-bottom:30px; }
-    </style>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <!-- load bootstrap -->
 
     <!-- SPELLS -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script><!-- load angular -->
-    <script src="core.js"></script>
+    <script src="contentviewer.js"></script>
 
+    <style>
+        ul li ul {
+            display: none;
+        }
+
+        .special {
+            background-color: darkgrey;
+        }
+    </style>
 </head>
 <!-- SET THE CONTROLLER AND GET ALL TODOS -->
 <body ng-controller="mainController">
@@ -30,38 +35,33 @@
 
     <!-- HEADER AND TO-DO COUNT -->
     <div class="jumbotron text-center">
-        <h1>I'm a Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
-    </div>
-
-    <!-- TO-DO LIST -->
-    <div id="todo-list" class="row">
-        <div class="col-sm-4 col-sm-offset-4">
-
-            <!-- LOOP OVER THE TODOS IN $scope.todos -->
-            <div class="checkbox" ng-repeat="todo in todos">
-                <label>
-                    <input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
-                </label>
-            </div>
-
-        </div>
+        <h1>I'm a Webcontent wizard</h1>
     </div>
 
     <!-- FORM TO CREATE TODOS -->
     <div id="todo-form" class="row">
-        <div class="col-sm-8 col-sm-offset-2 text-center">
+        <div class="col-sm-6 text-center">
             <form>
                 <div class="form-group">
-
                     <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
-                    <input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy that will love me forever" ng-model="formData.text">
+                    <input type="text" class="form-control input-lg text-center"
+                           placeholder="I want to buy a puppy that will love me forever" ng-model="formData.url">
                 </div>
 
                 <!-- createToDo() WILL CREATE NEW TODOS -->
-                <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+                <button type="submit" class="btn btn-primary btn-lg" ng-click="getContent()">Add</button>
             </form>
         </div>
+        <div class="col-sm-6">
+            <!-- LOOP OVER THE TODOS IN $scope.todos -->
+            <div ng-repeat="child in tree" ng-class="{special : isSelected($index)}">
+                <div class="col-sm-offset-{{child.level}}">
+                    <a href="" ng-click="selectSimilar(child)">{{child.tag}}</a>
+                </div>
+            </div>
+        </div>
     </div>
+
 
 </div>
 
